--- a/BlazorShop.Web/wwwroot/index.html
+++ b/BlazorShop.Web/wwwroot/index.html
@@ -19,6 +19,7 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    <script src="https://kit.fontawesome.com/2efce7d34f.js" crossorigin="anonymous"></script>
     <script src="js/CarrinhoCompraFunctions.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
